--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio_website_",
-  "homepage": "poudelrabin7.com.np",
+"homepage": "https://poudelrabin7.com.np",
   "private": true,
   "version": "0.0.0",
   "type": "module",
