--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio_website_",
-"homepage": "https://poudelrabin7.com.np",
+  "homepage": "https://poudelrabin7.com.np",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,16 +9,24 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm  run build",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm  run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@fontsource/inter": "^5.2.6",
+    "@fontsource/lato": "^5.2.6",
+    "@fontsource/montserrat": "^5.2.6",
+    "@fontsource/poppins": "^5.2.6",
+    "@fontsource/roboto": "^5.2.6",
     "@tailwindcss/vite": "^4.0.9",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.5.3",
     "tailwindcss": "^4.0.9"
